<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bribri.myapplication.activities.MainActivity">
    <item
        android:id="@+id/action_month"
        android:orderInCategory="100"
        android:title="@string/action_month"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_allevents"
        android:orderInCategory="100"
        android:title="@string/action_allevents"
        app:showAsAction="never"/>
    <item
    android:id="@+id/action_year"
    android:orderInCategory="100"
    android:title="@string/action_week"
    app:showAsAction="never"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
